[project]
name = "cptracks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "greenlet>=3.2.3",
    "langchain-openai>=0.3.23",
    "mcp-use>=1.3.0",
    "openai>=1.86.0",
    "pandas>=2.3.0",
    "pinecone>=7.0.2",
    "psycopg2>=2.9.10",
    "sqlalchemy>=2.0.41",
    "tenacity>=9.1.2",
]
